<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5EE"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonProfile"
        style="@style/buttonBigBoxMain"
        android:layout_width="143dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_profile_text"
        app:layout_constraintEnd_toEndOf="@+id/buttonFavourites"
        app:layout_constraintTop_toBottomOf="@+id/buttonFavourites" />

    <Button
        android:id="@+id/buttonAllRecipe"
        style="@style/buttonBigBoxMain"
        android:layout_width="143dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_all_recipe"
        app:layout_constraintStart_toStartOf="@+id/buttonFavourites"
        app:layout_constraintTop_toBottomOf="@+id/buttonFavourites" />

    <Button
        android:id="@+id/buttonSearchRecipe"
        style="@style/buttonBigBoxMain"
        android:layout_width="143dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_search_recipe"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonFavourites"
        style="@style/buttonLongWhileTextColor"
        android:layout_width="311dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/favorite_button"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearchFromTag" />

    <Button
        android:id="@+id/buttonSearchFromTag"
        style="@style/buttonBigBoxMain"
        android:layout_width="143dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_search_tag_recipe"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:text="@string/text_title_menu"
        android:textAppearance="@style/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBasket"
        style="@style/buttonLongWhileTextColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/basket"
        app:layout_constraintEnd_toEndOf="@+id/buttonProfile"
        app:layout_constraintStart_toStartOf="@+id/buttonAllRecipe"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfile" />

    <Button
        android:id="@+id/buttonMoreRecipe"
        style="@style/buttonLongBlackTextColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/more_recipe"
        app:layout_constraintEnd_toEndOf="@+id/buttonBasket"
        app:layout_constraintStart_toStartOf="@+id/buttonBasket"
        app:layout_constraintTop_toBottomOf="@+id/buttonBasket" />

</androidx.constraintlayout.widget.ConstraintLayout>