<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PlaceHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/imageChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/profile_image"
                app:srcCompat="@drawable/unknown_person"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textViewTitleEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/edit_profile"
                android:textAppearance="@style/buttonTextTagTypeOne"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/email_hint"
                android:textAppearance="@style/title_text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="2dp"
                android:text="@string/name"
                android:textAppearance="@style/buttonTextTagTypeOne"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/image_search_box"
                android:ems="10"
                android:hint="@string/input_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textCapSentences"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#212121"
                android:textColorHint="#757575"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSaveProfile"
            style="@style/buttonBigBoxMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#FFB28B"
            android:gravity="bottom|center_horizontal"
            android:text="@string/save"
            app:cornerRadius="18dp" />

        <TextView
            android:id="@+id/textViewAdministratorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:text="@string/welcome_admin_panel"
            android:textAppearance="@style/mainTextAmatic"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonAdminPanel"
            style="@style/buttonLongWhileTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:enabled="false"
            android:text="@string/go_admin_panel"
            android:visibility="gone" />

    </LinearLayout>

</FrameLayout>